Fix overflow bug in hidden cells

--- a/sagenb/data/sage/less/main.less
+++ b/sagenb/data/sage/less/main.less
@@ -327,6 +327,7 @@ body.single_cell_mode .single_cell_controls {
 			.CodeMirror-scroll {
 				max-height: 20px;
 				opacity: 0.5;
+				overflow-y: hidden;
 			}
 		}
 	}
